# src/main/java/com/example/bankcards/dto/request/CardTransferRequestDto.java
@@ -1,0 +1,13 @@
+package com.example.bankcards.dto.request;
+
+import lombok.Data;
+
+@Data
+public class CardTransferRequestDto {
+
+    private Long fromCardId;
+
+    private Long toCardId;
+
+    private Long amount;
+}
